# diploma2022

./: CMakeLists.txt  README.md  g.json  main.cpp  p.py
graphs/: 2.lout  2.mm  2.time  am.lout  am.mm  am.pout  am.time  bj.lout  bj.time  cc.lout  cc.time  cd.lout  cd.pout  cd.time  cz.time  dg.lout  dg.mm  dg.time  fz.lout  fz.time  gy.lout  gy.time  hb.pout  hb.time  hf.lout  hf.time  hh.pout  hh.time  hk.lout  hk.mm  hk.time  hz.lout  hz.mm  hz.time  jn.lout  jn.mm  jn.pout  jn.time  km.lout  km.time  (+72 more)
graphs 2/: 2.little_out  2.prima_out  am.little_out  bj.little_out  bj.mm  bj.prima_out  cc.little_out  cc.mm  cc.prima_out  cd.little_out  cd.mm  cz.little_out  cz.mm  cz.prima_out  dg.prima_out  fz.little_out  fz.mm  fz.prima_out  gy.little_out  gy.mm  gy.prima_out  hb.little_out  hb.mm  hf.mm  hf.prima_out  hh.little_out  hh.mm  hk.little_out  hk.prima_out  hz.little_out  hz.prima_out  km.mm  km.prima_out  lz.little_out  lz.prima_out  nb.little_out  nb.mm  nc.little_out  nc.mm  nj.mm  (+24 more)
res/: Diploma  input.in
src/: matrix.hpp
src/Algorithms/: GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  LittleAlgorithm.cpp  LittleAlgorithm.hpp  Prima_and_Kraskala.cpp  Prima_and_Kraskala.h
src/Data/: Edge.cpp  Edge.hpp  MetroMap.cpp  MetroMap.hpp  Prima.cpp  Prima.hpp  Vertex.cpp  Vertex.hpp
src/Utils/: Random.hpp
